--- a/index.html
+++ b/index.html
@@ -7,51 +7,76 @@
     <meta name="author" content="">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+	<link rel="stylesheet" href="css/jquery-ui.custom.css" type="text/css" />
 	<link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
 	  <div class="navbar-inner">
-    	<a id="logo" class="brand" href="#">Climbr</a>
-    	<ul class="nav pull-right">
-    		<li id="signin" class="btn btn-inverse"
-    			<a href="/signin">Sign In</a>
-    		</li>
-    	</ul>
+	  	<div class="container pull-left">
+	  		<a id="logo" href="#"><img src="img/logoSmall.png"/></a>
+	  	</div>
+		<div class="btn-group pull-right">
+			<div class="modal hide" id="signup" style="display: none;">
+			  <div class="modal-header">
+			    <button type="button" class="close" data-dismiss="modal">×</button>
+			    <h3>Modal header</h3>
+			  </div>
+			  <div class="modal-body">
+			    <p>One fine body…</p>
+			  </div>
+			  <div class="modal-footer">
+			    <a href="#" class="btn" data-dismiss="modal">Close</a>
+			    <a href="#" class="btn btn-primary">Save changes</a>
+			  </div>
+			</div>
+			<a class="btn btn-inverse" data-toggle="modal" href="#signup">Sign Up</a>
+			<a id="login" class="btn btn-inverse" href="#login">Log In</a>
+		</div>
 	  </div>
 	</div>
 
 	<div class="subnav">
 		<ul class="nav nav-pills">
-	    <li class="dropdown">
-	      <a id="climbingStyles" class="dropdown-toggle" data-toggle="dropdown" href="#">Climbing Style<b class="caret"></b>
-	      </a>
-	      <ul class="dropdown-menu">
-	      	<li id="sport">
-	        	<a href="#sport">Sport</a>
-	        </li>
-	        <li id="trad">
-	        	<a href="#trad">Trad</a>
-	        </li>
-	        <li id="bouldering">
-	        	<a href="#bouldering">Bouldering</a>
-	        </li>
-	        <li id="dws">
-	        	<a href="#dws">Deep Water Soloing</a>
-	        </li>
-	      </ul>
-	    </li>
-	    <li id="searchBar">
-	    	<form class="form-search">
-		    	<div class="input-append">
-		    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead">
-		    		<button id="searchBtn" type="submit" class="btn">
-		    			<i class="icon-search"></i>
-		    		</button>	    
-		    	</div>
-	    	</form>
-	  	</li>
-	  </ul>
+		    <li class="dropdown">
+		      <a id="climbingStyles" class="dropdown-toggle" data-toggle="dropdown" href="#">Climbing Style<b class="caret"></b>
+		      </a>
+		      <ul class="dropdown-menu">
+		      	<li id="sport">
+		        	<a href="#sport">Sport</a>
+		        </li>
+		        <li id="trad">
+		        	<a href="#trad">Trad</a>
+		        </li>
+		        <li id="bouldering">
+		        	<a href="#bouldering">Bouldering</a>
+		        </li>
+		        <li id="dws">
+		        	<a href="#dws">Deep Water Soloing</a>
+		        </li>
+		      </ul>
+		    </li>
+		    <li id="searchBar">
+		    	<form class="form-search">
+			    	<div class="input-append">
+			    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead">
+			    		<button id="searchBtn" type="submit" class="btn">
+			    			<i class="icon-search"></i>
+			    		</button>	    
+			    	</div>
+		    	</form>
+		  	</li>
+		  	<li id="gradeLabel"> 
+		  		<span class="label label-important"></span>
+		  	</li>
+		  	<li id="gradesSlider" class="container">
+		  		<div id="slider-range" class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
+		  			<div class="ui-slider-range ui-widget-header"></div>
+		  			<a class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a>
+		  			<a class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a>
+		  		</div>
+	  		</li>
+	  	</ul>
 	</div>
 
 	<div class="container-fluid">
@@ -69,11 +94,14 @@
 	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="js/libs/underscore-min.js"></script>
 	<script type="text/javascript" src="js/libs/backbone-min.js"></script>
+	<script type="text/javascript" src="js/libs/jquery-ui.custom.min.js"></script>
 	<script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/libs/bootstrap-modal.js"></script>
 	<script type="text/javascript" src="js/libs/bootstrap-typeahead.js"></script>
 	<script type="text/javascript" src="js/libs/bootstrap-dropdown.js"></script>
 	<script type="test/javascript" src="js/libs/bootstrap-tooltip.js"></script>
 	<script type="text/javascript" src="js/libs/bootstrap-popover.js"></script>
+	<script type="text/javascript" src="js/libs/bootstrap-button.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?sensor=true&key=AIzaSyAjNafop09-jd2jkly8d05QaPcOa0WddX8"></script>
 	<script type="text/javascript" src="js/libs/gmap3.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
