--- a/index.html
+++ b/index.html
@@ -5,105 +5,200 @@
 	<title>Climbr</title>
 	<meta name="description" content="">
     <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="css/jquery-ui.custom.css" type="text/css" />
-	<link rel="stylesheet" href="css/main.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="css/bootstrap-responsive.css"> -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/jquery-ui.custom.css">
+	<!-- <link rel="stylesheet" href="css/jquery.mobile.custom.min.css"> -->
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="navbar navbar-fixed-top">
+	<div class="navbar navbar-inverse navbar-fixed-top">
 	  <div class="navbar-inner">
 	  	<div class="container pull-left">
 	  		<a id="logo" href="#"><img src="img/logoSmall.png"/></a>
 	  	</div>
 		<div class="btn-group pull-right">
-			<div class="modal hide" id="signup" style="display: none;">
-			  <div class="modal-header">
-			    <button type="button" class="close" data-dismiss="modal">×</button>
-			    <h3>Modal header</h3>
-			  </div>
-			  <div class="modal-body">
-			    <p>One fine body…</p>
-			  </div>
-			  <div class="modal-footer">
-			    <a href="#" class="btn" data-dismiss="modal">Close</a>
-			    <a href="#" class="btn btn-primary">Save changes</a>
-			  </div>
-			</div>
-			<a class="btn btn-inverse" data-toggle="modal" href="#signup">Sign Up</a>
+			<a class="btn btn-inverse" data-toggle="modal" href="#myModal">Sign Up</a>
 			<a id="login" class="btn btn-inverse" href="#login">Log In</a>
 		</div>
 	  </div>
 	</div>
 
-	<div class="subnav">
-		<ul class="nav nav-pills">
-		    <li class="dropdown">
-		      <a id="climbingStyles" class="dropdown-toggle" data-toggle="dropdown" href="#">Climbing Style<b class="caret"></b>
-		      </a>
-		      <ul class="dropdown-menu">
-		      	<li id="sport">
-		        	<a href="#sport">Sport</a>
-		        </li>
-		        <li id="trad">
-		        	<a href="#trad">Trad</a>
-		        </li>
-		        <li id="bouldering">
-		        	<a href="#bouldering">Bouldering</a>
-		        </li>
-		        <li id="dws">
-		        	<a href="#dws">Deep Water Soloing</a>
-		        </li>
-		      </ul>
-		    </li>
-		    <li id="searchBar">
-		    	<form class="form-search">
-			    	<div class="input-append">
-			    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead">
-			    		<button id="searchBtn" type="submit" class="btn">
-			    			<i class="icon-search"></i>
-			    		</button>	    
-			    	</div>
-		    	</form>
-		  	</li>
-		  	<li id="gradeLabel"> 
-		  		<span class="label label-important"></span>
-		  	</li>
-		  	<li id="gradesSlider" class="container">
-		  		<div id="slider-range" class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
-		  			<div class="ui-slider-range ui-widget-header"></div>
-		  			<a class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a>
-		  			<a class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a>
-		  		</div>
-	  		</li>
-	  	</ul>
+	<div id="subNav" class="navbar navbar-fixed-top">	
+		<div class="navbar-inner">
+			<ul class="nav">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						Climbing Style<b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu" role="menu">
+				      	<li id="sport">
+				        	<a href="#sport">Sport</a>
+				        </li>
+				        <li id="trad">
+				        	<a href="#trad">Trad</a>
+				        </li>
+				        <li id="bouldering">
+				        	<a href="#bouldering">Bouldering</a>
+				        </li>
+				        <li id="dws">
+				        	<a href="#dws">Deep Water Soloing</a>
+				        </li>
+					</ul>
+				</li>
+				<li id="searchBar">
+			    	<form class="navbar-search">
+				    	<div class="input-append">
+				    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead" placeholder="Search">
+				    		<!-- <button id="searchBtn" type="submit" class="btn">
+				    			<i class="icon-search"></i>
+				    		</button> -->	    
+				    	</div>
+			    	</form>
+			  	</li>
+			  	<li id="gradesSlider" class="container">
+			  		<div id="slider-range" class="ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all">
+			  			<div class="ui-slider-range ui-widget-header"></div>
+			  			<a class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a>
+			  			<a class="ui-slider-handle ui-state-default ui-corner-all" href="#"></a>
+			  		</div>
+		  		</li>
+		  		<li id="gradeLabel"> 
+			  		<span class="label label-important"></span>
+			  	</li>
+			</ul>
+		</div>
 	</div>
 
-	<div class="container-fluid">
+	<div class="container-fluid fill">
 	  <div class="row-fluid">
-	    <div class="span3">
-	    	<div class="well sidebar-nav">
-	    	</div>
+	    <div class="span3 pull-left">
+	    	<ul class="nav nav-tabs nav-stacked">
+	    		<li>
+	    			<a>
+	    				<label class="checkbox">
+							<input type="checkbox">
+						</label>
+						The Sacred Traverse
+						<ul class="stars">
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+						</ul>
+						<i class="icon-chevron-right"></i>
+						<span class="label label-important">V3 or V4</span>
+					</a>
+	    		</li>
+	    		<li>
+	    			<a>
+	    				<label class="checkbox">
+							<input type="checkbox">
+						</label>
+						The Sugar Traverse
+						<ul class="stars">
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+						</ul>
+						<i class="icon-chevron-right"></i>
+						<span class="label label-important">V5</span>
+					</a>
+	    		</li>
+	    		<li>
+	    			<a>
+	    				<label class="checkbox">
+							<input type="checkbox">
+						</label>
+						Call of the Wild
+						<ul class="stars">
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+						</ul>
+						<i class="icon-chevron-right"></i>
+						<span class="label label-important">V3</span>
+					</a>
+	    		</li>
+	    		<li>
+	    			<a>
+	    				<label class="checkbox">
+							<input type="checkbox">
+						</label>
+						Enchanted
+						<ul class="stars">
+							<i class="icon-star"></i>
+						</ul>
+						<i class="icon-chevron-right"></i>
+						<span class="label label-important">V4</span>
+					</a>
+	    		</li>
+	    		<li>
+	    			<a>
+	    				<label class="checkbox">
+							<input type="checkbox">
+						</label>
+						White Fang
+						<ul class="stars">
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+							<i class="icon-star"></i>
+						</ul>
+						<i class="icon-chevron-right"></i>
+						<span class="label label-important">V6</span>
+					</a>
+	    		</li>
+	    	</ul>
 	    </div>
-	    <div class="span9">
+	    <div class="span9 pull-right">
 	    	<div id="map"></div>
+	    	<!-- <div class="row-fluid">
+		    	<div id="friends" class="span9">
+		    		<ul>
+					  <li class="span1">
+					    <a href="#">
+					      <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/211592_589790042_1230740427_n.jpg" alt="">
+					    </a>
+					  </li>
+					  <li class="span1">
+					    <a href="#">
+					      <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/211592_589790042_1230740427_n.jpg" alt="">
+					    </a>
+					  </li>
+					  <li class="span1">
+					    <a href="#">
+					      <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash2/211592_589790042_1230740427_n.jpg" alt="">
+					    </a>
+					</ul>
+		    	</div>
+		    </div> -->
 	    </div>
 	  </div>
 	</div>	
 
-	<script type="text/javascript" src="js/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="js/libs/underscore-min.js"></script>
-	<script type="text/javascript" src="js/libs/backbone-min.js"></script>
-	<script type="text/javascript" src="js/libs/jquery-ui.custom.min.js"></script>
-	<script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/libs/bootstrap-modal.js"></script>
-	<script type="text/javascript" src="js/libs/bootstrap-typeahead.js"></script>
-	<script type="text/javascript" src="js/libs/bootstrap-dropdown.js"></script>
-	<script type="test/javascript" src="js/libs/bootstrap-tooltip.js"></script>
-	<script type="text/javascript" src="js/libs/bootstrap-popover.js"></script>
-	<script type="text/javascript" src="js/libs/bootstrap-button.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?sensor=true&key=AIzaSyAjNafop09-jd2jkly8d05QaPcOa0WddX8"></script>
-	<script type="text/javascript" src="js/libs/gmap3.min.js"></script>
+	<div class="modal hide fade" id="myModal">
+		<div class="modal-header">
+			<a class="close" data-dismiss="modal">×</a>
+			<h3>Sign in to Climbr</h3>
+		</div>
+		<div class="modal-body">
+			<p>
+				<a href="#fbconnect"><img src="img/Large_fb_connect.png"/></a>
+			</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#" class="btn" data-dismiss="modal">Close</a>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
+	<script type="text/javascript" src="js/lib/underscore-min.js"></script>
+	<script type="text/javascript" src="js/lib/backbone-min.js"></script>
+	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery-ui.custom.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery.mobile.custom.min.js"></script>
+	<script type="text/javascript" src="js/lib/maps.google.js"></script>
+	<script type="text/javascript" src="js/lib/gmap3.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
