--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	  		<a id="logo" href="#"><img src="img/logoSmall.png"/></a>
 	  	</div>
 		<div class="btn-group pull-right">
-			<a class="btn btn-inverse" data-toggle="modal" href="#myModal">Sign Up</a>
+			<a class="btn btn-inverse" role="button" data-toggle="modal" href="#myModal">Sign Up</a>
 			<a id="login" class="btn btn-inverse" href="#login">Log In</a>
 		</div>
 	  </div>
@@ -49,12 +49,12 @@
 					</ul>
 				</li>
 				<li id="searchBar">
-			    	<form class="navbar-search">
+			    	<form class="form-search">
 				    	<div class="input-append">
 				    		<input id="searchField" class="input-medium search-query" type="text" data-provide="typeahead" placeholder="Search">
-				    		<!-- <button id="searchBtn" type="submit" class="btn">
+				    		<button id="searchBtn" type="submit" class="btn">
 				    			<i class="icon-search"></i>
-				    		</button> -->	    
+				    		</button>	    
 				    	</div>
 			    	</form>
 			  	</li>
