--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 	    <div class="span3 pull-left">
 	    	<ul class="nav nav-tabs nav-stacked">
 	    		<li>
+	    			<a>Sacred Rocks</a>
+    			</li>
+	    		<li>
 	    			<a>
 	    				<label class="checkbox">
 							<input type="checkbox">
