CSS working, google maps not loading async yet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="css/jquery-ui.custom.css">
 	<!-- <link rel="stylesheet" href="css/jquery.mobile.custom.min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
+
+	<script data-main="js/config" src="js/libs/require/require.js"></script>
+
 </head>
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -194,15 +197,6 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="js/lib/jquery.min.js"></script>
-	<script type="text/javascript" src="js/lib/underscore-min.js"></script>
-	<script type="text/javascript" src="js/lib/backbone-min.js"></script>
-	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/lib/jquery-ui.custom.min.js"></script>
-	<script type="text/javascript" src="js/lib/jquery.mobile.custom.min.js"></script>
-	<script type="text/javascript" src="js/lib/maps.google.js"></script>
-	<script type="text/javascript" src="js/lib/gmap3.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
 
