--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- <link rel="stylesheet" href="css/jquery.mobile.custom.min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
 
-	<script data-main="js/config" src="js/libs/require/require.js"></script>
+	<script data-main="js/config" src="js/libs/require/require-jquery.js"></script>
 
 </head>
 <body>
