--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- <link rel="stylesheet" href="css/jquery.mobile.custom.min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
 
-	<script data-main="js/config" src="js/libs/require/require-jquery.js"></script>
+	<script data-main="js/main" src="js/libs/require/require-jquery.js"></script>
 
 </head>
 <body>
@@ -55,9 +55,27 @@
 			<h3>Sign in to Climbr</h3>
 		</div>
 		<div class="modal-body">
-			<p>
-				<a href="#fbconnect"><img src="img/Large_fb_connect.png"/></a>
-			</p>
+			<form class="form-horizontal">
+			  <div class="control-group">
+			    <label class="control-label" for="inputEmail">Email</label>
+			    <div class="controls">
+			      <input type="text" id="inputEmail" placeholder="Email">
+			    </div>
+			  </div>
+			  <div class="control-group">
+			    <label class="control-label" for="inputPassword">Password</label>
+			    <div class="controls">
+			      <input type="password" id="inputPassword" placeholder="Password">
+			    </div>
+			  </div>
+			  <div class="control-group">
+			     	<div class="form-actions">
+						  <button type="submit" class="btn btn-primary">Login</button>
+						  <button type="button" class="btn btn-primary">Connect using <strong>Facebook</strong></button>
+						  <!-- <a href="#fbconnect"><img src="img/Large_fb_connect.png"/></a> -->
+					  </div>
+			  </div>
+			</form>
 		</div>
 		<div class="modal-footer">
 			<a href="#" class="btn" data-dismiss="modal">Close</a>
