--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 	<div class="modal hide fade" id="loginModal">
 		<div class="modal-header">
 			<a class="close" data-dismiss="modal">×</a>
-			<h3>Sign in to Climbr</h3>
+			<h3>Log in to Climbr</h3>
 		</div>
 		<div class="modal-body">
 			<form class="form-horizontal">
